<resources>
    <string name="app_name" translatable="false">Vary</string>
    <string name="add_team" translatable="false">+</string>
    <string name="next">Далее</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="team">Команда</string>
    <string name="continue_game">Продолжить</string>
    <string name="new_game">Новая игра</string>
    <string name="available_settings">Настройки</string>
    <string name="no_cards_message">Не удалось скачать карточки</string>
    <string name="download">Повторить..</string>
    <string name="settings_game">Настройки игры</string>
    <string name="amount_cards">Количество карт</string>
    <string name="time_round">Время раунда</string>
    <string name="penalty">Штраф за пропуск</string>
    <string name="no">Нет</string>
    <string name="loss_of_points">Потеря баллов</string>
    <string name="players_task">Задание от игроков</string>
    <string name="theft_right">Общее последнее слово</string>
    <string name="start_command">Начинающая команда</string>
    <string name="base_url" translatable="false">http://95.165.156.185:33727</string>
    <string name="start_next_round_button">Следующий раунд</string>
    <string name="results">Результаты</string>
    <string name="guessed_words">Набранные баллы</string>
    <string name="ready">Готово</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="pause_title">Пауза</string>
    <string name="pause_content">Нажмите на экран, чтобы продолжить</string>
    <string name="preview_title">Превью</string>
    <string name="preview_text">Нажми на экран, когда будешь готов</string>
    <string name="_0" translatable="false">0</string>
    <string name="explain_mode_str">Объясни словами</string>
    <string name="gesture_mode_str">Покажи жестами</string>
    <string name="one_word_mode_str">Объясни одним словом</string>
    <string name="explain_mode_str_preview">Объясни</string>
    <string name="gesture_mode_str_preview">Покажи</string>
    <string name="one_word_mode_str_preview">Одно слово</string>
    <string name="choose_deck_text">Выбрать колоду</string>
    <string name="team_add_text">Новое название</string>
    <string name="players_task_title">Задание от игроков</string>
    <string name="players_task_content">Выполни задание от игроков\nКогда будешь готов - нажми на экран</string>
    <string name="teams">Команды</string>
    <string name="pieces">\ штук</string>
    <string name="seconds">\ сек</string>
    <string name="pick_team">Выбери команду</string>
    <string name="nobody">Никто</string>
    <string name="result_team_prompt">Нажми на слово, чтобы изменить его результат</string>
    <string name="add_team_prompt">Нажми на команду, чтобы изменить её название</string>
    <string name="cards_tooltip">Оставшиеся карты в колоде</string>
    <string name="modes_tooltip">Следующие режимы игры</string>
    <string name="random">Случайная</string>
    <string name="sounds">Звуки в игре</string>
    <string name="check_updates">Проверять обновления</string>
    <string name="back">Назад</string>
    <string name="game_description">Авторская игра для компаний от четырех человек.</string>
    <string name="beginning_of_game_description">\tИгроки разбиваются на команды от двух человек. Выбирается размер колоды карт.\n\tДалее нужно за выбранное время объяснить своей команде как можно больше слов указанным способом. Следующая команда получает колоду со словами, необъясненными ранее в текущем режиме игры.\n\tПосле того как карты закончатся, начальная колода перемешивается, и команды объясняют те же слова, но новым способом:</string>
    <string name="mode_explain_with_words">Режим Объясни словами</string>
    <string name="explain_with_words_description">\tРассказывай истории, приводи примеры, вспоминай песни и придумывай подсказки, но не объясняй буквы, не используй однокоренные (например качели - качаются) и иностранные слова.\n\tПохожие игры - Шляпа, Alias.</string>
    <string name="mode_explain_with_gestures">Режим Покажи жестами</string>
    <string name="explain_with_gestures_description">\tДвигай любой частью тела, принимай любые позы, рисуй жестами, но не издавай ни звука, не указывай на какие-либо предметы и не показывай буквы.\n\tПохожие игры - Крокодил.</string>
    <string name="mode_explain_with_one_word">Режим Объясни одним словом</string>
    <string name="explain_with_one_word_description">\tТы можешь сказать лишь одно слово, ведь за два раунда все игроки выучили колоду карт. Будь внимателен: это слово нельзя изменить, и исправить свою ошибку можно лишь сбросив карту. Не забывай про запрет на однокоренные и иностранные слова.</string>
    <string name="additional_info">Дополнительные указания</string>
    <string name="additional_info_text">\tПобеждает команда, набравшая наибольшее количество очков по итогам всех раундов.\n\tИгроки могут включить режим общего последнего слова: по истечении времени карточку может отгадать любая команда.\n\tЗадание от игроков может быть любым, начиная от правды или действия, заканчивая кукареканьем под столом.</string>
    <string name="about_us">\tМГТУ им. Н.Э. Баумана\n\tТехнопарк Mail.ru\n\tSymtax error\n\t2021</string>
    <string name="about_us_label">О нас</string>
    <string name="answered">ОТГАДАНО</string>
    <string name="declined">ПРОПУЩЕНО</string>
    <string name="soundview">SoundView</string>
    <string name="checkupdatesview">CheckUpdatesView</string>
    <string name="sound_off_notification">Включите звук, чтобы все команды могли следить за игрой</string>
    <string name="sound_off_option">Включить</string>
    <string name="sound_low_notification">Увеличьте громкость для того, чтобы все команды могли следить за игрой</string>
    <string name="sound_low_option">Увеличить</string>
    <string name="previewview">PreviewView</string>
    <string name="pool_ended_message">Колода пуста</string>
    <string name="firstly_download_cards">Сначала скачай карточки</string>
</resources>