<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_color"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/set_teams_text"

        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:background="@drawable/menu_top_shape"
        android:gravity="center"

        android:text="@string/teams"
        android:textColor="@color/text_bright"
        android:textSize="@dimen/menu_top_text_size" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commands_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/set_teams_text"
        android:layout_above="@+id/add_team_prompt"/>

    <Button
        android:id="@+id/open_game_settings"

        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:layout_alignParentBottom="true"

        android:background="@drawable/menu_bottom_shape"
        android:gravity="center"
        android:text="@string/next"
        android:textSize="@dimen/menu_bottom_text_size"
        android:textColor="@color/text_bright"/>

    <TextView
        android:id="@+id/add_team_prompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/open_game_settings"
        android:text="@string/add_team_prompt"
        android:padding="5dp"
        android:gravity="center"/>


</RelativeLayout>