<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_color"
    tools:context=".UI.GameSettingsFragment">

    <!--    Верхняя штука-->
    <TextView
        android:id="@+id/settings_game"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/menu_top_shape"
        android:gravity="center"
        android:text="@string/settings_game"
        android:textColor="@color/text_bright"
        android:textSize="@dimen/menu_top_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/start_game_button"
        android:layout_below="@id/settings_game">

        <!--        Количество карточек текст-->
        <RelativeLayout
            android:id="@+id/amount_cards_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingStart="52dp"
            android:paddingEnd="52dp">

            <TextView

                android:layout_alignParentStart="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                android:text="@string/amount_cards"
                android:textColor="@color/primary"
                android:textSize="@dimen/game_text_size" />
            <TextView
                android:id="@+id/amount_cards_dynamic"

                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                tools:text="100 штук"
                android:textColor="@color/primary"
                android:textSize="@dimen/game_text_size" />

        </RelativeLayout>

        <!--        количество карточек двигается-->
        <SeekBar
            android:id="@+id/bar_amount_cards"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"

            android:layout_below="@id/amount_cards_linear"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:max="100"
            android:progress="50"

            android:progressTint="@color/secondary"
            android:thumbTint="@color/secondary" />

        <RelativeLayout
            android:id="@+id/time_round_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bar_amount_cards"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingStart="52dp"
            android:paddingEnd="52dp">

            <TextView

                android:layout_alignParentStart="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                android:text="@string/time_round"
                android:textColor="@color/primary"
                android:textSize="@dimen/game_text_size" />
            <TextView
                android:id="@+id/time_round_dynamic"

                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                tools:text="100 сек"
                android:textColor="@color/primary"
                android:textSize="@dimen/game_text_size" />

        </RelativeLayout>

        <!--        Время двигается-->
        <SeekBar
            android:id="@+id/bar_round_time"
            android:layout_width="fill_parent"
            android:layout_marginStart="80dp"
            android:layout_height="wrap_content"

            android:layout_below="@id/time_round_linear"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"

            android:max="100"
            android:progress="60"

            android:progressTint="@color/secondary"
            android:thumbTint="@color/secondary" />

        <!--        Штраф-->
        <TextView
            android:id="@+id/penalty"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"

            android:layout_below="@id/bar_round_time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"

            android:text="@string/penalty"
            android:textColor="@color/primary"
            android:textSize="@dimen/game_text_size" />

        <RadioGroup
            android:id="@+id/penalty_group"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/penalty"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/no_penalty"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@color/secondary"

                android:text="@string/no"
                android:textColor="@color/text_bright" />

            <RadioButton
                android:id="@+id/loss_points_penalty"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@color/secondary"
                android:checked="true"

                android:text="@string/loss_of_points"
                android:textColor="@color/text_bright" />

            <RadioButton
                android:id="@+id/players_task_penalty"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@color/secondary"

                android:text="@string/players_task"
                android:textColor="@color/text_bright" />
        </RadioGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/theft_right"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"

            android:layout_below="@id/penalty_group"
            android:layout_centerHorizontal="true"

            android:buttonTint="@color/secondary"
            android:checked="true"
            android:text="@string/theft_right"

            android:textColor="@color/primary"
            android:textSize="@dimen/game_text_size"
            android:thumbTint="@color/secondary"
            android:trackTint="@color/secondary_additional"/>


        <TextView
            android:id="@+id/choose_command_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"

            android:layout_below="@id/theft_right"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"

            android:text="@string/start_command"
            android:textColor="@color/primary"
            android:textSize="@dimen/game_text_size" />

        <Spinner
            android:id="@+id/choose_team_spinner"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"

            android:layout_below="@id/choose_command_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"

            android:backgroundTint="@color/secondary"
            android:foregroundTint="@color/secondary"

            />


        <TextView
            android:id="@+id/choose_deck_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"

            android:layout_below="@id/choose_team_spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"

            android:text="@string/choose_deck_text"
            android:textColor="@color/primary"
            android:textSize="@dimen/game_text_size" />

        <!--        Походу спиннер колод-->
        <Spinner
            android:id="@+id/spinner_deck_card"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"

            android:layout_below="@id/choose_deck_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"

            android:backgroundTint="@color/secondary"
            android:foregroundTint="@color/secondary"


            />

    </RelativeLayout>

    <!--    Нижняя штука-->
    <Button
        android:id="@+id/start_game_button"

        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"

        android:background="@drawable/menu_bottom_shape"

        android:text="@string/next"
        android:textSize="@dimen/menu_bottom_text_size"
        android:textColor="@color/text_bright"/>

</RelativeLayout>