<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".UI.OnGameFragment">

    <RelativeLayout
        android:id="@+id/pause"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="@color/black_overlay">
        <TextView
            android:id="@+id/pause_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:text="@string/pause_title"
            android:gravity="center"
            android:textSize="40sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:layout_below="@+id/pause_title"
            android:text="@string/pause_content"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="@color/black_overlay">
        <TextView
            android:id="@+id/preview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:text="@string/preview_title"
            android:gravity="center"
            android:textSize="40sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:layout_below="@+id/preview_title"
            android:text="@string/preview_text"
            />
    </RelativeLayout>

    <View
        android:id="@+id/game_button_limit_top"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/game_top_shape"/>

    <View
        android:id="@+id/game_button_limit_bot"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/game_bot_shape"/>


    <TextView
        android:id="@+id/team_name_on_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="ИМЯ КОМАНДЫ"
        android:textColor="@color/secondary"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/time_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/_0"
        android:textColor="@color/secondary"
        android:textSize="25sp"
        android:layout_below="@+id/team_name_on_game"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="5dp"/>

    <RelativeLayout
        android:id="@+id/card_root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/game_button_limit_top"
        android:layout_above="@+id/game_button_limit_bot">
    </RelativeLayout>

    <TextView
        android:id="@+id/round_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/_0"
        android:textColor="@color/secondary"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_above="@+id/game_mode"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/game_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary"
        android:textSize="25sp"
        tools:text="РЕЖИМ ИГРЫ"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="5dp"/>


</RelativeLayout>