<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#232122"
            android:fontFamily="cursive"
            android:textStyle="italic"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_marginTop="190dp">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="50dp">
        <Button
            android:id="@+id/continue_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/secondary"
            android:visibility="visible"
            android:gravity="center"
            android:text="@string/continue_game"
            android:textColor="#232122"
            android:textSize="20sp"
            android:fontFamily="cursive"
            >

        </Button>

        <Button
            android:id="@+id/new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:background="@drawable/button_shape"
            android:layout_marginTop="15dp"
            android:text="@string/new_game"
            android:backgroundTint="@color/secondary"
            android:textColor="#232122"
            android:textSize="20sp"
            android:fontFamily="cursive"
            android:gravity="center"
            >

        </Button>


    </LinearLayout>



    <Button
        android:id="@+id/rules"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#A5C05B"
        android:text="?"
        android:textColor="#232122"
        android:textSize="30sp"
        android:fontFamily="cursive"
        android:gravity="center"
        >

    </Button>

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings"
        android:background="@drawable/settings"
        android:contentDescription="@string/settings">

    </ImageButton>
</RelativeLayout>